--- a/official-ws/nodejs/index.html
+++ b/official-ws/nodejs/index.html
@@ -2,10 +2,71 @@
 <html>
 <head>
   <title></title>
+  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  <link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+
   <script src="https://cdn.bootcss.com/lodash.js/4.17.10/lodash.min.js"></script>
   <script type="text/javascript" src="./libForBrowser.js"></script>
+  <script src="https://code.highcharts.com/highcharts.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
+  <style type="text/css">
+    .chart-wrapper {
+      /*width: 400px;*/
+      /*height: 400px;*/
+    }
+    #highchart-container {
+      width: 400px;
+      height: 400px;
+    }
+  </style>
 </head>
 <body>
+  <div class="chart-wrapper">
+    <canvas id="myChart"></canvas>
+  </div>
+  <p>
+  <label for="amount">range:</label>
+    <input type="text" id="amount" readonly style="border:0; color:#f6931f; font-weight:bold;">
+  </p>
+   
+  <div id="slider-range"></div>
+  <div id="highchart-container">
+    
+  </div>
+  <script>
+    var CONFIG = {
+      s0: 3385,
+      s1: 3828,
+      space: 300
+    }
+    $( function() {
+      var $range = $("#slider-range" ).slider({
+        range: true,
+        min: 0,
+        max: 10000,
+        values: [CONFIG.s0, CONFIG.s1],
+        slide: function( event, ui ) {
+          var v0 = ui.values[ 0 ],
+              v1 = ui.values[ 1 ]
+          if (v0 !== CONFIG.s0) {
+            CONFIG.s0 = v0
+            // CONFIG.s1 = v0 + CONFIG.space
+          } else if (v1 !== CONFIG.s1) {
+            CONFIG.s1 = v1
+            // CONFIG.s0 = v1 - CONFIG.space
+          }
+          if (CONFIG.s0 !== v0 || CONFIG.s1 !== v1) {
+            $range.slider( "values", [CONFIG.s0, CONFIG.s1])
+          }
+          $( "#amount" ).val( ui.values[ 0 ] + " - " + ui.values[ 1 ] );
+        }
+      });
+      $( "#amount" ).val($( "#slider-range" ).slider( "values", 0 ) +
+        " - " + $( "#slider-range" ).slider( "values", 1 ) );
+    } );
+  </script>
+  <script type="text/javascript" src="./drawHightChart.js"></script>
   <script type="text/javascript" src="./webMain.js"></script>
 </body>
 </html>
