--- a/official-ws/nodejs/index.html
+++ b/official-ws/nodejs/index.html
@@ -3,7 +3,7 @@
 <head>
   <title></title>
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  <script src="http://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 
   <script src="https://cdn.bootcss.com/lodash.js/4.17.10/lodash.min.js"></script>
