--- a/official-ws/nodejs/strategy/web/go.html
+++ b/official-ws/nodejs/strategy/web/go.html
@@ -8,14 +8,21 @@
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="http://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-
+  <script src="https://cdn.bootcss.com/moment.js/2.22.1/moment.min.js"></script>
   <script src="https://cdn.bootcss.com/lodash.js/4.17.10/lodash.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
+  <style>
+    #book-lines-chart {
+      width: 1000px;
+      height: 500px;
+    }
+  </style>
 </head>
 <body>
   <div id="app">
-
+    <canvas id="book-lines-chart"></canvas>
   </div>
+  <script src="./mockData.js"></script>
   <script src="./book.js"></script>
   <script src="./main.js"></script>
 </body>
