--- a/official-ws/nodejs/strategy/web/go.html
+++ b/official-ws/nodejs/strategy/web/go.html
@@ -19,6 +19,9 @@
   </style>
 </head>
 <body>
+  <div>
+    <button id="pause-btn">暂停</button>
+  </div>
   <div id="app">
     <canvas id="book-lines-chart"></canvas>
   </div>
