--- a/official-ws/nodejs/strategy/researchStrategy/web/index.html
+++ b/official-ws/nodejs/strategy/researchStrategy/web/index.html
@@ -7,11 +7,13 @@
   <title>Document</title>
   <link href="https://cdn.bootcss.com/jsgrid/1.5.3/jsgrid-theme.min.css" rel="stylesheet">
   <link href="https://cdn.bootcss.com/jsgrid/1.5.3/jsgrid.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="./main.css">
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdn.bootcss.com/jsgrid/1.5.3/jsgrid.min.js"></script>
 </head>
 <body>
   <div id="app"></div>
+  <script src="./web/lib.js"></script>
   <script src="./web/main.js"></script>
 </body>
 </html>
