--- a/official-ws/nodejs/strategy/researchStrategy/web/index.html
+++ b/official-ws/nodejs/strategy/researchStrategy/web/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
   <link href="https://cdn.bootcss.com/jsgrid/1.5.3/jsgrid-theme.min.css" rel="stylesheet">
   <link href="https://cdn.bootcss.com/jsgrid/1.5.3/jsgrid.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="./main.css">
+  <link rel="stylesheet" href="./web/main.css">
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdn.bootcss.com/jsgrid/1.5.3/jsgrid.min.js"></script>
 </head>
