--- a/official-ws/nodejs/strategy/researchStrategy/web/index.html
+++ b/official-ws/nodejs/strategy/researchStrategy/web/index.html
@@ -5,14 +5,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <link href="https://cdn.bootcss.com/semantic-ui/2.3.1/semantic.min.css" rel="stylesheet">
   <link href="https://cdn.bootcss.com/jsgrid/1.5.3/jsgrid-theme.min.css" rel="stylesheet">
   <link href="https://cdn.bootcss.com/jsgrid/1.5.3/jsgrid.min.css" rel="stylesheet">
   <link rel="stylesheet" href="./web/main.css">
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdn.bootcss.com/jsgrid/1.5.3/jsgrid.min.js"></script>
+  <script src="https://cdn.bootcss.com/semantic-ui/2.3.1/semantic.min.js"></script>
 </head>
 <body>
   <div id="app"></div>
+  <div>
+      <form class="ui form">
+        <div class="inline field">
+          <label>id</label>
+          <input type="text" name="id" id="new-id-input">
+        </div>
+        <button class="ui button" type="button" id="add-new-btn">新增</button>
+      </form>
+      <script>
+        $('#add-new-btn').click(function() {
+          var id = $('#new-id-input').val()
+          Site.addNew(id)
+        })
+      </script>
+    </div>
   <script src="./web/lib.js"></script>
   <script src="./web/main.js"></script>
 </body>
