--- a/official-ws/nodejs/strategy/researchStrategy/web/index-dev.html
+++ b/official-ws/nodejs/strategy/researchStrategy/web/index-dev.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,11 +9,18 @@
   <link href="https://cdn.bootcss.com/semantic-ui/2.3.1/semantic.min.css" rel="stylesheet">
   <link href="https://cdn.bootcss.com/jsgrid/1.5.3/jsgrid-theme.min.css" rel="stylesheet">
   <link href="https://cdn.bootcss.com/jsgrid/1.5.3/jsgrid.min.css" rel="stylesheet">
+  <link href="https://cdn.bootcss.com/codemirror/5.38.0/codemirror.min.css" rel="stylesheet">
+  <link href="https://cdn.bootcss.com/codemirror/5.38.0/addon/lint/lint.min.css" rel="stylesheet">
   <link rel="stylesheet" href="./main.css">
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdn.bootcss.com/jsgrid/1.5.3/jsgrid.min.js"></script>
   <script src="https://cdn.bootcss.com/semantic-ui/2.3.1/semantic.min.js"></script>
+  <script src="https://cdn.bootcss.com/codemirror/5.38.0/codemirror.min.js"></script>
+  <script src="https://cdn.bootcss.com/codemirror/5.38.0/addon/edit/matchbrackets.min.js"></script>
+  <script src="https://cdn.bootcss.com/codemirror/5.38.0/addon/lint/lint.min.js"></script>
+  <script src="https://cdn.bootcss.com/codemirror/5.38.0/addon/lint/json-lint.min.js"></script>
 </head>
+
 <body>
   <div id="app"></div>
   <div>
@@ -24,14 +32,40 @@
       <button class="ui button" type="button" id="add-new-btn">新增</button>
     </form>
     <script>
-      $('#add-new-btn').click(function() {
+      $('#add-new-btn').click(function () {
         var id = $('#new-id-input').val()
         Site.addNew(id)
       })
     </script>
   </div>
+  <div class="ui modal">
+    <i class="close icon"></i>
+    <div class="header">
+      Modal Title
+    </div>
+    <div class="content">
+      <div id="codemirror">
+      </div>
+    </div>
+    <div class="actions">
+      <div class="ui button">Cancel</div>
+      <div class="ui button">OK</div>
+    </div>
+  </div>
+  <script>
+    // $('.ui.modal')
+    //   .modal('show')
+    // var myCodeMirror = CodeMirror(document.getElementById('codemirror'), {
+    //   lineNumbers: true,
+    //   mode: 'application/json',
+    //   smartIndent : true,
+    //   lint: true,
+    //   matchBrackets:true,
+    // })
+  </script>
   <script src="./dev/list.js"></script>
   <script src="./lib.js"></script>
   <script src="./dev/dev-main.js"></script>
 </body>
+
 </html>
