update Strategy add disableLong

--- a/official-ws/nodejs/strategy/researchStrategy/web/index-dev.html
+++ b/official-ws/nodejs/strategy/researchStrategy/web/index-dev.html
@@ -52,6 +52,8 @@
       <div class="ui button">OK</div>
     </div>
   </div>
+  <div id="loader" class="ui active disabled massive loader"></div>
+
   <script>
     // $('.ui.modal')
     //   .modal('show')
