web add disableLong short

--- a/official-ws/nodejs/strategy/researchStrategy/web/index.html
+++ b/official-ws/nodejs/strategy/researchStrategy/web/index.html
@@ -30,6 +30,7 @@
         })
       </script>
     </div>
+  <div id="loader" class="ui active disabled massive loader"></div>
   <script src="./web/lib.js"></script>
   <script src="./web/main.js"></script>
 </body>
