--- a/official-ws/nodejs/influxdb/web/orderbook.html
+++ b/official-ws/nodejs/influxdb/web/orderbook.html
@@ -32,8 +32,8 @@
   </div>
   <div id="slider-range"></div>
   <div>
-    <button id="next">&lt;</button>
-    <button id="pre">&gt;</button>
+    <button id="pre">&lt;</button>
+    <button id="next">&gt;</button>
   </div>
   <div>
     <table id="orderbook-actions">
