--- a/official-ws/nodejs/strategy/backtest/test_rsi/S1背离反转策略回测/index.html
+++ b/official-ws/nodejs/strategy/backtest/test_rsi/S1背离反转策略回测/index.html
@@ -122,20 +122,20 @@
             </tr>
             <tr>
               <td>全部交易的平均持仓K线根数</td>
-              <td style="color: ">1</td>
-              <td style="color: ">1</td>
+              <td style="color: ">99.63483146067416</td>
+              <td style="color: ">99.63483146067416</td>
               <td style="color: ">NaN</td>
             </tr>
             <tr>
               <td>盈利交易的平均持仓K线根数</td>
-              <td style="color: ">1</td>
-              <td style="color: ">1</td>
+              <td style="color: ">80.18518518518519</td>
+              <td style="color: ">80.18518518518519</td>
               <td style="color: ">NaN</td>
             </tr>
             <tr>
               <td>亏损交易的平均持仓K线根数</td>
-              <td style="color: ">1</td>
-              <td style="color: ">1</td>
+              <td style="color: ">160.69767441860466</td>
+              <td style="color: ">160.69767441860466</td>
               <td style="color: ">NaN</td>
             </tr>
         </tbody>
