--- a/official-ws/nodejs/strategy/backtest/test_break_candle/S2放量突破策略回测/index.html
+++ b/official-ws/nodejs/strategy/backtest/test_break_candle/S2放量突破策略回测/index.html
@@ -15,7 +15,7 @@
     </style>
   </head>
   <body>
-    <h3>S1背离反转策略回测</h3>
+    <h3>S2放量突破策略回测</h3>
     <p>
       回测日期：2019-8-18<br/>
       回测交易所：BITMEX<br/>
@@ -24,11 +24,10 @@
       回测K线数：206317&nbsp;
     </p>
     <ul>
-        <li>基本原理：使用RSI背离指标，结合波动性和交易量和轴枢点位置等做短线反转</li>
-        <li>优势：牛市中的回调会买入，熊市中也会有很好的抗风险能力</li>
+        <li>基本原理：日线指标为上涨趋势，结合小时线放量，5分钟趋势K线突破高点，等待回撤后的高4点位</li>
+        <li>优势：严格的止盈止损</li>
         <li>交易方式：程序全自动化交易，亦可以辅助人工操作, 结合常见顶部形态可将策略关闭即可</li>
         <li>杠杆倍数：小于3</li>
-        <li>备注：最大回撤出现在2018年11月份，那是BCH分叉事件导致，可以人工避免那段交易</li>
     </ul>
     <h4>收益曲线</h4>
     <p>复利收益曲线：1=初始仓位大小，2表示收益100%，依次类推;&nbsp;回撤：-1表示亏损100%，爆仓</p>
@@ -45,32 +44,32 @@
         <tbody>
             <tr>
               <td>净利润</td>
-              <td style="color: ">$13476.90</td>
-              <td style="color: ">$13476.90</td>
+              <td style="color: ">$15428.50</td>
+              <td style="color: ">$15428.50</td>
               <td style="color: ">$0.00</td>
             </tr>
             <tr>
               <td>毛利润</td>
-              <td style="color: ">$20490.30</td>
-              <td style="color: ">$20490.30</td>
+              <td style="color: ">$24038.80</td>
+              <td style="color: ">$24038.80</td>
               <td style="color: ">$0.00</td>
             </tr>
             <tr>
               <td>毛亏损</td>
-              <td style="color: red">$-7013.40</td>
-              <td style="color: red">$-7013.40</td>
+              <td style="color: red">$-8610.30</td>
+              <td style="color: red">$-8610.30</td>
               <td style="color: ">$0.00</td>
             </tr>
             <tr>
               <td>最大回撤</td>
-              <td style="color: red">$-1311.50</td>
-              <td style="color: red">$-1311.50</td>
+              <td style="color: red">$-1630.00</td>
+              <td style="color: red">$-1630.00</td>
               <td style="color: ">$0.00</td>
             </tr>
             <tr>
               <td>盈利因子</td>
-              <td style="color: ">2.921592950637352</td>
-              <td style="color: ">2.921592950637352</td>
+              <td style="color: ">2.7918655563685357</td>
+              <td style="color: ">2.7918655563685357</td>
               <td style="color: ">NaN</td>
             </tr>
             <tr>
@@ -81,62 +80,62 @@
             </tr>
             <tr>
               <td>所有已平仓交易</td>
-              <td style="color: ">178</td>
-              <td style="color: ">178</td>
+              <td style="color: ">132</td>
+              <td style="color: ">132</td>
               <td style="color: ">0</td>
             </tr>
             <tr>
               <td>获利交易次数</td>
-              <td style="color: ">135</td>
-              <td style="color: ">135</td>
+              <td style="color: ">78</td>
+              <td style="color: ">78</td>
               <td style="color: ">0</td>
             </tr>
             <tr>
               <td>亏损交易次数</td>
-              <td style="color: ">43</td>
-              <td style="color: ">43</td>
+              <td style="color: ">54</td>
+              <td style="color: ">54</td>
               <td style="color: ">0</td>
             </tr>
             <tr>
               <td>胜率</td>
-              <td style="color: ">75.84%</td>
-              <td style="color: ">75.84%</td>
+              <td style="color: ">59.09%</td>
+              <td style="color: ">59.09%</td>
               <td style="color: ">NaN%</td>
             </tr>
             <tr>
               <td>平均交易</td>
-              <td style="color: ">$75.71</td>
-              <td style="color: ">$75.71</td>
+              <td style="color: ">$116.88</td>
+              <td style="color: ">$116.88</td>
               <td style="color: ">$NaN</td>
             </tr>
             <tr>
               <td>平均盈利交易</td>
-              <td style="color: ">$151.78</td>
-              <td style="color: ">$151.78</td>
+              <td style="color: ">$308.19</td>
+              <td style="color: ">$308.19</td>
               <td style="color: ">$NaN</td>
             </tr>
             <tr>
               <td>平均亏损交易</td>
-              <td style="color: red">$-163.10</td>
-              <td style="color: red">$-163.10</td>
+              <td style="color: red">$-159.45</td>
+              <td style="color: red">$-159.45</td>
               <td style="color: ">$NaN</td>
             </tr>
             <tr>
               <td>全部交易的平均持仓K线根数</td>
-              <td style="color: ">99.63483146067416</td>
-              <td style="color: ">99.63483146067416</td>
+              <td style="color: ">272.0378787878788</td>
+              <td style="color: ">272.0378787878788</td>
               <td style="color: ">NaN</td>
             </tr>
             <tr>
               <td>盈利交易的平均持仓K线根数</td>
-              <td style="color: ">80.18518518518519</td>
-              <td style="color: ">80.18518518518519</td>
+              <td style="color: ">375.7564102564103</td>
+              <td style="color: ">375.7564102564103</td>
               <td style="color: ">NaN</td>
             </tr>
             <tr>
               <td>亏损交易的平均持仓K线根数</td>
-              <td style="color: ">160.69767441860466</td>
-              <td style="color: ">160.69767441860466</td>
+              <td style="color: ">122.22222222222223</td>
+              <td style="color: ">122.22222222222223</td>
               <td style="color: ">NaN</td>
             </tr>
         </tbody>
