--- a/official-ws/nodejs/strategy/backtest/test_compose/S3锤子线形态策略/index.html
+++ b/official-ws/nodejs/strategy/backtest/test_compose/S3锤子线形态策略/index.html
@@ -15,17 +15,17 @@
     </style>
   </head>
   <body>
-    <h3>S4compose_rsidivergence_rsiclose</h3>
+    <h3>S3锤子线形态策略</h3>
     <p>
-      回测日期：2019-8-25<br/>
+      回测日期：2019-8-26<br/>
       回测交易所：BITMEX<br/>
       品种：XBTUSD&nbsp;
-      时间级别：5分钟&nbsp;
-      回测K线数：207500&nbsp;
+      时间级别：1小时&nbsp;
+      回测K线数：208652&nbsp;
     </p>
     <ul>
-        <li>基本原理：日线指标为上涨趋势，结合小时线放量，5分钟趋势K线突破高点，等待回撤后的高4点位</li>
-        <li>优势：严格的止盈止损</li>
+        <li>基本原理：pin bar, 中文为锤子线, 这种形态意味着底部的买压很大, 有的时候是主力扫止损的行为, 是很好的逆向减仓形态</li>
+        <li>优势：收益较高, 劣势: 熊市有较大的回撤</li>
         <li>交易方式：程序全自动化交易，亦可以辅助人工操作, 结合常见顶部形态可将策略关闭即可</li>
         <li>杠杆倍数：小于3</li>
     </ul>
@@ -44,20 +44,20 @@
         <tbody>
             <tr>
               <td>净利润</td>
-              <td style="color: ">$21188.30</td>
-              <td style="color: ">$21188.30</td>
+              <td style="color: ">$21198.80</td>
+              <td style="color: ">$21198.80</td>
               <td style="color: ">$0.00</td>
             </tr>
             <tr>
               <td>毛利润</td>
-              <td style="color: ">$32880.80</td>
-              <td style="color: ">$32880.80</td>
+              <td style="color: ">$32892.80</td>
+              <td style="color: ">$32892.80</td>
               <td style="color: ">$0.00</td>
             </tr>
             <tr>
               <td>毛亏损</td>
-              <td style="color: red">$-11692.50</td>
-              <td style="color: red">$-11692.50</td>
+              <td style="color: red">$-11694.00</td>
+              <td style="color: red">$-11694.00</td>
               <td style="color: ">$0.00</td>
             </tr>
             <tr>
@@ -68,8 +68,8 @@
             </tr>
             <tr>
               <td>盈利因子</td>
-              <td style="color: ">2.812127432114603</td>
-              <td style="color: ">2.812127432114603</td>
+              <td style="color: ">2.812792885240294</td>
+              <td style="color: ">2.812792885240294</td>
               <td style="color: ">NaN</td>
             </tr>
             <tr>
@@ -80,62 +80,62 @@
             </tr>
             <tr>
               <td>所有已平仓交易</td>
-              <td style="color: ">354</td>
-              <td style="color: ">354</td>
+              <td style="color: ">356</td>
+              <td style="color: ">356</td>
               <td style="color: ">0</td>
             </tr>
             <tr>
               <td>获利交易次数</td>
-              <td style="color: ">247</td>
-              <td style="color: ">247</td>
+              <td style="color: ">248</td>
+              <td style="color: ">248</td>
               <td style="color: ">0</td>
             </tr>
             <tr>
               <td>亏损交易次数</td>
-              <td style="color: ">107</td>
-              <td style="color: ">107</td>
+              <td style="color: ">108</td>
+              <td style="color: ">108</td>
               <td style="color: ">0</td>
             </tr>
             <tr>
               <td>胜率</td>
-              <td style="color: ">69.77%</td>
-              <td style="color: ">69.77%</td>
+              <td style="color: ">69.66%</td>
+              <td style="color: ">69.66%</td>
               <td style="color: ">NaN%</td>
             </tr>
             <tr>
               <td>平均交易</td>
-              <td style="color: ">$59.85</td>
-              <td style="color: ">$59.85</td>
+              <td style="color: ">$59.55</td>
+              <td style="color: ">$59.55</td>
               <td style="color: ">$NaN</td>
             </tr>
             <tr>
               <td>平均盈利交易</td>
-              <td style="color: ">$133.12</td>
-              <td style="color: ">$133.12</td>
+              <td style="color: ">$132.63</td>
+              <td style="color: ">$132.63</td>
               <td style="color: ">$NaN</td>
             </tr>
             <tr>
               <td>平均亏损交易</td>
-              <td style="color: red">$-109.28</td>
-              <td style="color: red">$-109.28</td>
+              <td style="color: red">$-108.28</td>
+              <td style="color: red">$-108.28</td>
               <td style="color: ">$NaN</td>
             </tr>
             <tr>
               <td>全部交易的平均持仓K线根数</td>
-              <td style="color: ">138.60169491525423</td>
-              <td style="color: ">138.60169491525423</td>
+              <td style="color: ">137.83988764044943</td>
+              <td style="color: ">137.83988764044943</td>
               <td style="color: ">NaN</td>
             </tr>
             <tr>
               <td>盈利交易的平均持仓K线根数</td>
-              <td style="color: ">103.39676113360323</td>
-              <td style="color: ">103.39676113360323</td>
+              <td style="color: ">102.99193548387096</td>
+              <td style="color: ">102.99193548387096</td>
               <td style="color: ">NaN</td>
             </tr>
             <tr>
               <td>亏损交易的平均持仓K线根数</td>
-              <td style="color: ">218.37383177570092</td>
-              <td style="color: ">218.37383177570092</td>
+              <td style="color: ">216.37962962962962</td>
+              <td style="color: ">216.37962962962962</td>
               <td style="color: ">NaN</td>
             </tr>
         </tbody>
